scraper_debug.log
  File "/home/runner/work/livelo_scraper/livelo_scraper/livelo_scraper.py", line 752
    if groups[1] in ['R
                     ^
SyntaxError: unterminated string literal (detected at line 752)
